<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundOfActivity"
    android:background="@color/first_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title_of_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/app_name"
        style="@style/TextViewThemeOnMyOwn"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintBottom_toTopOf="@+id/main_encounter_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/main_encounter_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/gamestarterencounter"
        app:layout_constraintBottom_toTopOf="@+id/startGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_part_of_center_part" />

    <ImageButton
        android:id="@+id/arrow_right_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/toswapbackground"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toTopOf="@+id/bottom_part_of_center_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startGameButton"
        app:layout_constraintTop_toBottomOf="@+id/main_encounter_picture" />

    <ImageButton
        android:id="@+id/arrow_left_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/bottom_part_of_center_part"
        app:layout_constraintEnd_toStartOf="@+id/startGameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_encounter_picture"
        android:contentDescription="@string/toswapbackground" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:fontFamily="@font/antonregular"
        android:textColor="@color/string_color"
        android:background="@drawable/bg_button"
        android:letterSpacing="0.25"
        app:backgroundTint="@null"
        android:text="@string/start_game"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toTopOf="@+id/bottom_part_of_center_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:text="@string/default_countdown_timer"
        android:id="@+id/countDownTimerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewThemeOnMyOwn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />

    <TextView
        android:text="@string/default_score_text"
        android:id="@+id/scoreTableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextViewThemeOnMyOwn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom" />
    <ImageView
        android:id="@+id/movingObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/down_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:contentDescription="@string/game" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_part_of_center_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_part_of_center_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"/>

</androidx.constraintlayout.widget.ConstraintLayout>